2009-03-16  Emmanuele Bassi  <ebassi@gnome.org>

	* configure.ac: Post-branch bump to 2.27.1

======== 2.26.0 ===============================================================

2009-03-16  Emmanuele Bassi  <ebassi@gnome.org>

	* NEWS:
	* README:
	* configure.ac: Release 2.26.0

======== 2.25.92 ==============================================================

2009-03-02  Cosimo Cecchi  <cosimoc@gnome.org>

	* NEWS:
	* README:
	* configure.ac: Release 2.25.92

2009-02-24  Cosimo Cecchi  <cosimoc@gnome.org>

	* configure.ac: add a section that checks for gthread, so that we
	can explicitely	link to it.

======== 2.25.90 ==============================================================

	* NEWS:
	* README:
	* configure.ac: Release 2.25.90

======== 2.25.2 ===============================================================

2009-01-09  Cosimo Cecchi  <cosimoc@gnome.org>

	* NEWS:
	* README:
	* configure.ac: Release 2.25.2

======== 2.25.1 ===============================================================

2009-01-08  Cosimo Cecchi  <cosimoc@gnome.org>

	* NEWS:
	* README:
	* configure.ac: Release 2.25.1

2008-12-19  Emmanuele Bassi  <ebassi@gnome.org>

	* configure.ac: Post-release bump to 2.25.1

======== 2.25.0 ===============================================================

2008-12-19  Emmanuele Bassi  <ebassi@gnome.org>

	* README:
	* NEWS: Release 2.25.0

2008-11-04  Cosimo Cecchi  <cosimoc@gnome.org>

	* configure.ac: reorganize PKG_CHECK_MODULES to split libgnome
	checks from the rest (part of #557262).

2008-10-21  Cosimo Cecchi  <cosimoc@gnome.org>

	* configure.ac: Bump GTK+ requirement to 2.14.0.
	Drop libgnomeui dependency from gnome-screenshot (#557169).

2008-10-20  Emmanuele Bassi  <ebassi@gnome.org>

	* configure.ac: Post release and post branch bump to 2.25.0

======== 2.24.1 ===============================================================

2008-10-20  Emmanuele Bassi  <ebassi@gnome.org>

	* NEWS:
	* README:
	* configure.ac: Release 2.24.1
