@@ -1,3 +1,7 @@
+2009-03-16  Dennis Cranston <dennis_cranston@yahoo.com>
+
+	* configure.ac: remove the gnome-vfs requirement
+	
 2009-03-16  Emmanuele Bassi  <ebassi@gnome.org>
 
 	* configure.ac: Post-branch bump to 2.27.1
